--- a/package.json
+++ b/package.json
@@ -3,18 +3,18 @@
   "version": "5.7.2",
   "description": "Activity detection for React.js",
   "main": "./dist/index.cjs.js",
-  "module": "./dist/index.esm.js",
+  "module": "./dist/index.esm.mjs",
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
       "require": "./dist/index.cjs.js",
-      "import": "./dist/index.esm.js"
+      "import": "./dist/index.esm.mjs"
     },
     "./legacy": {
       "types": "./dist/index.d.ts",
       "require": "./dist/index.legacy.cjs.js",
-      "import": "./dist/index.legacy.esm.js"
+      "import": "./dist/index.legacy.esm.mjs"
     }
   },
   "scripts": {
